--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,6 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   linux-build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -27,4 +26,18 @@ jobs:
 
       - name: Build
         run: sh ./linux_build.sh
+        
+      - name: Copy Binaries
+        run: cp -r ./bin/Release/. .
 
+      - name: Test
+        run: ./at_odds --exit
+        
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.3
+        with:
+          name: linux-build
+          path: |
+            ./data
+            ./at_odds
+          
