added rockets, animation toml file and on death animation effects for projectiles

--- a/data/objects/projectiles.toml
+++ b/data/objects/projectiles.toml
@@ -38,3 +38,10 @@ scaleY = 4.0
 damage = 0.0
 life = 100.0
 speed = 15.0
+
+[ROCKET]
+usesSprite = true
+texturePath = "data/art/rocket.png"
+deathAnimation = "SMALL_EXPLOSION"
+life = 400.0
+damage = 15.0
