--- a/data/objects/weapondesigns.toml
+++ b/data/objects/weapondesigns.toml
@@ -15,3 +15,9 @@ type = "GAUSS_CANNON"
 name = "Gauss Cannon"
 weaponPoints = 2.0
 cost = [[0, 10.0], [1, 5.0]]
+
+[ROCKET_LAUNCHER]
+type = "ROCKET_LAUNCHER"
+name = "Rocket Launcher"
+weaponPoints = 1.0
+cost = [[0, 2.5]]
