changed sound effect for machine guns and added an on death sound effect for rockets

--- a/data/objects/projectiles.toml
+++ b/data/objects/projectiles.toml
@@ -43,5 +43,6 @@ speed = 15.0
 usesSprite = true
 texturePath = "data/art/rocket.png"
 deathAnimation = "SMALL_EXPLOSION"
+deathSoundPath = "data/sound/boom2.wav"
 life = 400.0
 damage = 15.0
