new weapon: flak cannon quality of life: if a planet is uncolonized, the resources panel opens automatically

--- a/data/objects/projectiles.toml
+++ b/data/objects/projectiles.toml
@@ -46,3 +46,11 @@ deathAnimation = "SMALL_EXPLOSION"
 deathSoundPath = "data/sound/boom2.wav"
 life = 400.0
 damage = 15.0
+
+[FLAK]
+usesSprite = true
+texturePath = "data/art/flak.png"
+deathAnimation = "SMALL_EXPLOSION"
+deathSoundPath = "data/sound/boom2.wav"
+life = 175.0
+damage = 10.0
