--- a/data/objects/weapondesigns.toml
+++ b/data/objects/weapondesigns.toml
@@ -21,3 +21,9 @@ type = "ROCKET_LAUNCHER"
 name = "Rocket Launcher"
 weaponPoints = 1.0
 cost = [[0, 2.5]]
+
+[FLAK_CANNON]
+type = "FLAK_CANNON"
+name = "Flak Cannon"
+weaponPoints = 1.5
+cost = [[0, 5.0], [1, 2.0]]
