farm colony building now has an effect on the planet & did work on making planet gui & colony building gui look better

--- a/data/objects/colonybuildings.toml
+++ b/data/objects/colonybuildings.toml
@@ -5,6 +5,7 @@ description = "The vital systems needed to keep a society functioning."
 [FARMING]
 name = "Farms"
 baseCost = [["COMMON_ORE", 25]]
+habitabilityModifier = 1.2
 
 [MILITARY_BASE]
 name = "Military Base"
