--- a/data/objects/colonybuildings.toml
+++ b/data/objects/colonybuildings.toml
@@ -12,28 +12,36 @@ habitabilityModifier = 1.5
 [MILITARY_BASE]
 name = "Military Base"
 description = "Necessary for civil control if the populace gets a little bit unruly. Oh and for protecting against invasions from other empires."
+baseCost = [["UNCOMMON_ORE", 20], ["RARE_ORE", 5]]
 
 [SPACEPORT]
 name = "Spaceport"
 description = "Having a proper spaceport will greatly increase the commercial activity of the colony."
+baseCost = [["COMMON_ORE", 35]]
+flags = ["ENABLE_SPACEBUS"]
 
 [MINING]
 name = "Mine"
 description = "All your ores will be mine."
+baseCost = [["COMMON_ORE", 40], ["UNCOMMON_ORE", 10]]
 exploitationModifier = 1.7
 
 [ORBITAL_DEFENSE]
 name = "Orbital Defense"
-description = "Massive cannons that can be used to shoot any illegal aliens out of the sky."
+baseCost = [["COMMON_ORE", 10], ["UNCOMMON_ORE", 10], ["RARE_ORE", 10]]
+description = "Massive cannons that can be used to shoot any space invaders out of the sky."
 
 [CONSUMER_GOODS_FACTORIES]
 name = "Consumer Goods Factory"
+baseCost = [["COMMON_ORE", 20]]
 description = "Produces goods for consumers to consume. Also produces pollution."
 
 [WEAPONS_FACTORIES]
 name = "Weapons Factory"
+baseCost = [["COMMON_ORE", 30], ["UNCOMMON_ORE", 10]]
 description = "The profitable military industrial complex."
 
 [EXPLORING]
 name = "Exploration HQ"
+baseCost = [["UNCOMMON_ORE", 5]]
 description = "An organized planet exploration effort. They will surely discover useful things and not eldrich abominations."
