--- a/data/objects/chassis.toml
+++ b/data/objects/chassis.toml
@@ -15,3 +15,10 @@ type = "CONSTRUCTION_SHIP"
 name = "Constructor"
 maxWeaponCapacity = 0.0
 cost = [["COMMON_ORE", 33.0]]
+
+[CRUISER]
+type = "CRUISER"
+name = "Cruiser"
+maxWeaponCapacity = 5.0
+cost = [["COMMON_ORE", 100.0], ["RARE_ORE", 5.0]]
+buildTimeMultiplier = 2.0
