renamed arc gun to zapper

--- a/data/objects/weapondesigns.toml
+++ b/data/objects/weapondesigns.toml
@@ -34,9 +34,9 @@ name = "Mega Laser"
 weaponPoints = 4.0
 cost = [["COMMON_ORE", 75.0], ["UNCOMMON_ORE", 66.0]]
 
-[ARC_GUN]
-type = "ARC_GUN"
-name = "Arc Gun"
+[ZAPPER]
+type = "ZAPPER"
+name = "Zapper"
 weaponPoints = 2.0
 cost = [["COMMON_ORE", 20.0], ["UNCOMMON_ORE", 20.0]]
 
