made debug console code cleaner by separating the commands out into functions, and added the ability for ships armed with nuclear weapons to bombard enemy planets

--- a/data/objects/weapons.toml
+++ b/data/objects/weapons.toml
@@ -57,3 +57,4 @@ cooldownRecovery = 0.5
 projectile = "NUCLEAR_MISSILE"
 sound = "data/sound/rocket1.wav"
 cooldownRecovery = 0.25
+orbitalBombardment = true
