--- a/data/objects/projectiles.toml
+++ b/data/objects/projectiles.toml
@@ -84,3 +84,11 @@ texturePath = "data/art/nuclearmissile.png"
 deathFunction = "largeExplosion"
 life = 100.0
 damage = 80.0
+orbitalBombardment = true
+
+[INVASION_POD]
+texturePath = "data/art/invasionpod.png"
+deathFunction = "smallExplosion"
+life = 100.0
+damage = 0.0
+planetaryInvasion = true
