--- a/data/objects/weapons.toml
+++ b/data/objects/weapons.toml
@@ -62,3 +62,4 @@ cooldownRecovery = 0.25
 projectile = "INVASION_POD"
 sound = "data/sound/rocket1.wav"
 cooldownRecovery = 0.5
+allowedOnBuildings = false
