buildings are now selectable to see their health bar

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -59,6 +59,7 @@
     <ClInclude Include="src\GUI\NewGameMenu.h" />
     <ClInclude Include="src\GUI\MainMenu.h" />
     <ClInclude Include="src\GUI\PlanetGUI.h" />
+    <ClInclude Include="src\GUI\UnitGUI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Animation.cpp" />
@@ -106,5 +107,6 @@
     <ClCompile Include="src\GUI\NewGameMenu.cpp" />
     <ClCompile Include="src\GUI\MainMenu.cpp" />
     <ClCompile Include="src\GUI\PlanetGUI.cpp" />
+    <ClCompile Include="src\GUI\UnitGUI.cpp" />
   </ItemGroup>
 </Project>
