new selection animation, also added text to exploration hq effects section

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -113,5 +113,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="data\objects\planetevents.toml" />
+    <None Include="data\shaders\selectionshader.shader" />
   </ItemGroup>
 </Project>
