--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -61,6 +61,8 @@
     <ClInclude Include="src\GUI\PlanetGUI.h" />
     <ClInclude Include="src\GUI\UnitGUI.h" />
     <ClInclude Include="src\GUI\BuildingGUI.h" />
+    <ClInclude Include="src\NameGenerator.h" />
+    <ClInclude Include="src\Fonts.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Animation.cpp" />
@@ -110,6 +112,8 @@
     <ClCompile Include="src\GUI\PlanetGUI.cpp" />
     <ClCompile Include="src\GUI\UnitGUI.cpp" />
     <ClCompile Include="src\GUI\BuildingGUI.cpp" />
+    <ClCompile Include="src\NameGenerator.cpp" />
+    <ClCompile Include="src\Fonts.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="data\objects\planetevents.toml" />
