--- a/data/objects/buildings.toml
+++ b/data/objects/buildings.toml
@@ -4,7 +4,7 @@ texturePath = "data/art/outpost.png"
 scale = 2.0
 health = 1000.0
 mods = ["FighterBay"]
-onePerStar = true
+numPerStar = 1
 weapons = ["$RAND_WEAPON", "$RAND_WEAPON", "$RAND_WEAPON"]
 
 # Turrets
@@ -53,7 +53,7 @@ scale = 2.0
 health = 2500.0
 constructionSpeedMultiplier = 1.5
 mods = ["Factory"]
-onePerStar = true
+numPerStar = 5
 
 [SPACE_HABITAT]
 name = "Space Habitat"
