--- a/data/objects/spaceships.toml
+++ b/data/objects/spaceships.toml
@@ -44,6 +44,14 @@ colliderRadius = 150.0
 civilian = true
 playerCanGiveOrders = false
 
+[SPACE_TRUCK]
+texturePath = "data/art/spacetruck.png"
+mass = 75000.0
+health = 50.0
+colliderRadius = 150.0
+civilian = true
+playerCanGiveOrders = false
+
 [CRUISER]
 texturePath = "data/art/medfighter.png"
 scale = 6.0
