terra planets now have their own special shader, and massively improved the old planet shader to add atmospheric effects

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -122,5 +122,6 @@
     <None Include="data\shaders\selectionshader.shader" />
     <None Include="data\shaders\bordershader.shader" />
     <None Include="data\objects\tradegoods.toml" />
+    <None Include="data\shaders\terraplanetshader.shader" />
   </ItemGroup>
 </Project>
